Wrapper/C C++/audiogenie3.h

enum AudioFormatID : short
{
    UNKNOWN = 0,
    MPEG = 1,
    WMA = 2,
    MONKEY = 3,
    FLAC = 4,
    WAV = 5,
    OGGVORBIS = 6,
    MPEGPLUS = 7,
    AAC = 8,
    MP4M4A = 9,
    TTA = 10
};
enum PictureType : short
{
    OTHER = 0,
    FILE_ICON = 1,
    OTHER_FILE_ICON = 2,
    COVER_FRONT = 3,
    COVER_BACK = 4,
    LEAFLET_PAGE = 5,
    MEDIA_LABEL = 6,
    LEAD_ARTIST = 7,
    ARTIST_PERFORMER = 8,
    CONDUCTOR = 9,
    BAND_ORCHESTRA = 10,
    COMPOSER = 11,
    LYRICIST = 12,
    RECORDING_LOCATION = 13,
    DURING_RECORDING = 14,
    DURING_PERFORMANCE = 15,
    MOVIE_VIDEO_SCREEN_CAPTURE = 16,
    A_BRIGHT_COLOURED_FISH = 17,
    ILLUSTRATION = 18,
    BAND_ARTIST_LOGOTYPE = 19,
    PUBLISHER_STUDIO_LOGOTYPE = 20
};
DllImport BSTR __stdcall MPEGGetEmphasisW();
DllImport BSTR __stdcall MPEGGetEncoderW();
DllImport BSTR __stdcall MPEGGetLayerW();
DllImport BSTR __stdcall MPEGGetVersionW();
DllImport BSTR __stdcall OGGGetAlbumW();
DllImport BSTR __stdcall OGGGetArtistW();
DllImport BSTR __stdcall OGGGetCommentW();
DllImport BSTR __stdcall OGGGetContactW();
DllImport BSTR __stdcall OGGGetCopyrightW();
DllImport BSTR __stdcall OGGGetDateW();
DllImport BSTR __stdcall OGGGetDescriptionW();
DllImport BSTR __stdcall OGGGetGenreW();
DllImport BSTR __stdcall OGGGetISRCW();
DllImport BSTR __stdcall OGGGetItemKeysW();
DllImport BSTR __stdcall OGGGetLicenseW();
DllImport BSTR __stdcall OGGGetLocationW();
DllImport BSTR __stdcall OGGGetOrganizationW();
DllImport BSTR __stdcall OGGGetPerformerW();
DllImport BSTR __stdcall OGGGetTitleW();
DllImport BSTR __stdcall OGGGetTrackW();
DllImport BSTR __stdcall OGGGetUserItemW(LPCWSTR ItemKey);
DllImport BSTR __stdcall OGGGetVendorW();
DllImport BSTR __stdcall OGGGetVersionW();
DllImport BSTR __stdcall WAVGetCartChunkEntryW(short Index);
DllImport BSTR __stdcall WAVGetFormatW();
DllImport BSTR __stdcall WAVGetTextFrameW(u32 FrameID);
DllImport BSTR __stdcall WAVGetInfoChunkIDsW();
DllImport BSTR __stdcall WMAGetItemKeysW();
DllImport BSTR __stdcall WMAGetPictureDescriptionW(short Index);
DllImport BSTR __stdcall WMAGetPictureMimeW(short Index);
DllImport BSTR __stdcall WMAGetUserItemW(LPCWSTR ItemKey);
DllImport long __stdcall MPEGGetFramePositionW();
DllImport long __stdcall MPEGGetFrameSizeW();
DllImport long __stdcall MPEGGetFramesW();
DllImport long __stdcall MPPGetFramesW();
DllImport long __stdcall OGGGetBitRateNominalW();
DllImport long __stdcall WAVGetBitsPerSampleW();
DllImport long __stdcall WAVGetBlockAlignW();
DllImport long __stdcall WAVGetBytesPerSecondW();
DllImport long __stdcall WAVGetChannelsW();
DllImport long __stdcall WAVGetHeaderSizeW();
DllImport long __stdcall WMAGetPictureArrayW(BYTE *arr, u32 maxLen, short Index);
DllImport short __stdcall MP4AddPictureArrayW(BYTE *arr, u32 Length);
DllImport short __stdcall MP4AddPictureFileW(LPCWSTR FileName);
DllImport short __stdcall MPEGIsCopyrightedW();
DllImport short __stdcall MPEGIsOriginalW();
DllImport short __stdcall MPEGIsPaddingW();
DllImport short __stdcall MPEGIsPrivateW();
DllImport short __stdcall MPEGIsProtectedW();
DllImport short __stdcall MPEGIsVBRW();
DllImport short __stdcall MPEGSetCopyrightedW(LPCWSTR FileName, short newValue);
DllImport short __stdcall MPEGSetOriginalW(LPCWSTR FileName, short newValue);
DllImport short __stdcall MPEGSetPrivateW(LPCWSTR FileName, short newValue);
DllImport short __stdcall MPPGetStreamVersionW();
DllImport short __stdcall OGGRemoveTagFromFileW(LPCWSTR FileName);
DllImport short __stdcall OGGRemoveTagW();
DllImport short __stdcall OGGSaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall OGGSaveChangesW();
DllImport short __stdcall WAVGetFormatIDW();
DllImport short __stdcall WAVSaveChangesW();
DllImport short __stdcall WAVSaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall WMADeletePictureW(short Index);
DllImport short __stdcall WMAGetPictureFileW(LPCWSTR FileName, short Index);
DllImport short __stdcall WMAGetPictureCountW();
DllImport short __stdcall WMAGetPictureTypeW(short Index);
DllImport short __stdcall WMAIsVBRW();
DllImport short __stdcall WMASaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall WMASaveChangesW();
DllImport short __stdcall WMAAddPictureArrayW(BYTE *arr, u32 Length, LPCWSTR Description, short PictureType, short index);
DllImport short __stdcall WMAAddPictureFileW(LPCWSTR FileName, LPCWSTR Description, short PictureType, short Index);
DllImport void __stdcall MP4DeletePictureW(short Index);
DllImport void __stdcall MP4DeletePicturesW();
DllImport void __stdcall MP4SetTextFrameW(u32 FrameID, LPCWSTR textString);
DllImport void __stdcall MP4SetTrackW(LPCWSTR textString);
DllImport void __stdcall OGGSetAlbumW(LPCWSTR textString);
DllImport void __stdcall OGGSetArtistW(LPCWSTR textString);
DllImport void __stdcall OGGSetCommentW(LPCWSTR textString);
DllImport void __stdcall OGGSetContactW(LPCWSTR textString);
DllImport void __stdcall OGGSetCopyrightW(LPCWSTR textString);
DllImport void __stdcall OGGSetDateW(LPCWSTR textString);
DllImport void __stdcall OGGSetDescriptionW(LPCWSTR textString);
DllImport void __stdcall OGGSetGenreW(LPCWSTR textString);
DllImport void __stdcall OGGSetISRCW(LPCWSTR textString);
DllImport void __stdcall OGGSetLicenseW(LPCWSTR textString);
DllImport void __stdcall OGGSetLocationW(LPCWSTR textString);
DllImport void __stdcall OGGSetOrganizationW(LPCWSTR textString);
DllImport void __stdcall OGGSetPerformerW(LPCWSTR textString);
DllImport void __stdcall OGGSetTitleW(LPCWSTR textString);
DllImport void __stdcall OGGSetTrackW(LPCWSTR textString);
DllImport void __stdcall OGGSetUserItemW(LPCWSTR ItemKey, LPCWSTR textString);
DllImport void __stdcall OGGSetVendorW(LPCWSTR textString);
DllImport void __stdcall OGGSetVersionW(LPCWSTR textString);
DllImport void __stdcall SetConfigValueW(long key, long value);
DllImport void __stdcall SetLogFileW(LPCWSTR fileName);
DllImport void __stdcall WAVSetCartChunkEntryW(short Index, LPCWSTR textString);
DllImport void __stdcall WAVSetTextFrameW(u32 FrameID, LPCWSTR textString);
DllImport void __stdcall WMADeletePicturesW();
DllImport short __stdcall FLACAddPictureArrayW(BYTE *arr, u32 Length, LPCWSTR Description, short PictureType);
DllImport short __stdcall FLACAddPictureFileW(LPCWSTR FileName, LPCWSTR Description, short PictureType, short asLink);
DllImport short __stdcall FLACDeletePictureW(short Index);
DllImport void __stdcall FLACDeletePicturesW();
DllImport long __stdcall FLACGetPictureArrayW(BYTE *arr, u32 maxLen, short Index);
DllImport short __stdcall FLACGetPictureCountW();
DllImport BSTR __stdcall FLACGetPictureDescriptionW(short Index);
DllImport short __stdcall FLACGetPictureFileW(LPCWSTR FileName, short Index);
DllImport BSTR __stdcall FLACGetPictureMimeW(short Index);
DllImport long __stdcall FLACGetPictureSizeW(short Index);
DllImport BSTR __stdcall FLACGetPictureTypeTextW(short Index);
DllImport short __stdcall FLACGetPictureTypeW(short Index);
DllImport long __stdcall ID3V2GetPictureSizeW(short Index);
DllImport long __stdcall MP4GetPictureSizeW(short Index);
DllImport long __stdcall WMAGetPictureSizeW(short Index);
DllImport BSTR __stdcall WAVGetDisplayTextW();
DllImport void __stdcall WAVSetDisplayTextW(LPCWSTR textString);
DllImport void __stdcall WMASetUserItemW(LPCWSTR ItemKey, LPCWSTR textString);