Wrapper/VB6/clsAudioGenie.cls

Private Declare Sub MP4SetTextFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long, ByVal newText As Long)
Private Declare Sub MP4SetTrackW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function MP4AddPictureArrayW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long) As Integer
Private Declare Function MP4AddPictureFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Sub MP4DeletePicturesW Lib "AudioGenie3.dll" ()
Private Declare Function MP4DeletePictureW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function MPEGGetEmphasisW Lib "AudioGenie3.dll" () As String
Private Declare Function MPEGGetEncoderW Lib "AudioGenie3.dll" () As String
Private Declare Function MPEGGetFramePositionW Lib "AudioGenie3.dll" () As Long
Private Declare Function MPEGGetFrameSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function MPEGGetFramesW Lib "AudioGenie3.dll" () As Long
Private Declare Function MPEGGetLayerW Lib "AudioGenie3.dll" () As String
Private Declare Function MPEGGetVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function MPEGIsCopyrightedW Lib "AudioGenie3.dll" () As Integer
Private Declare Function MPEGIsOriginalW Lib "AudioGenie3.dll" () As Integer
Private Declare Function MPEGIsPaddingW Lib "AudioGenie3.dll" () As Integer
Private Declare Function MPEGIsPrivateW Lib "AudioGenie3.dll" () As Integer
Private Declare Function MPEGIsProtectedW Lib "AudioGenie3.dll" () As Integer
Private Declare Function MPEGIsVBRW Lib "AudioGenie3.dll" () As Integer
Private Declare Function MPEGSetCopyrightedW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal newValue As Integer) As Integer
Private Declare Function MPEGSetOriginalW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal newValue As Integer) As Integer
Private Declare Function MPEGSetPrivateW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal newValue As Integer) As Integer
Private Declare Function MPPGetFramesW Lib "AudioGenie3.dll" () As Long
Private Declare Function MPPGetStreamVersionW Lib "AudioGenie3.dll" () As Integer
Private Declare Function OGGGetAlbumW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetArtistW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetBitRateNominalW Lib "AudioGenie3.dll" () As Long
Private Declare Function OGGGetCommentW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetCopyrightW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetDateW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetDescriptionW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetGenreW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetISRCW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetItemKeysW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetLicenseW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetLocationW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetOrganizationW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetPerformerW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetTitleW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetTrackW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetUserItemW Lib "AudioGenie3.dll" (ByVal ItemKey As Long) As String
Private Declare Function OGGGetVendorW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGGetVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function OGGRemoveTagFromFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function OGGRemoveTagW Lib "AudioGenie3.dll" () As Integer
Private Declare Function OGGSaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function OGGSaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Sub OGGSetAlbumW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetArtistW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetCommentW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetCopyrightW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetDateW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetDescriptionW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetGenreW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetISRCW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetLicenseW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetLocationW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetOrganizationW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetPerformerW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetTitleW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetTrackW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetUserItemW Lib "AudioGenie3.dll" (ByVal ItemKey As Long, ByVal textString As Long)
Private Declare Sub OGGSetVendorW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub OGGSetVersionW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function OGGGetContactW Lib "AudioGenie3.dll" () As String
Private Declare Sub OGGSetContactW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub SetConfigValueW Lib "AudioGenie3.dll" (ByVal key As Long, ByVal value As Long)
Private Declare Sub SetLogFileW Lib "AudioGenie3.dll" (ByVal FileName As Long)
Private Declare Function WAVGetBitsPerSampleW Lib "AudioGenie3.dll" () As Long
Private Declare Function WAVGetBlockAlignW Lib "AudioGenie3.dll" () As Long
Private Declare Function WAVGetBytesPerSecondW Lib "AudioGenie3.dll" () As Long
Private Declare Function WAVGetCartChunkEntryW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function WAVGetChannelsW Lib "AudioGenie3.dll" () As Long
Private Declare Function WAVGetFormatIDW Lib "AudioGenie3.dll" () As Integer
Private Declare Function WAVGetFormatW Lib "AudioGenie3.dll" () As String
Private Declare Function WAVGetHeaderSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function WAVGetInfoChunkIDsW Lib "AudioGenie3.dll" () As String
Private Declare Function WAVGetTextFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long) As String
Private Declare Function WAVSaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Function WAVSaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Sub WAVSetCartChunkEntryW Lib "AudioGenie3.dll" (ByVal Index As Integer, ByVal textString As Long)
Private Declare Sub WAVSetTextFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long, ByVal textString As Long)
Private Declare Function WMADeletePictureW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Sub WMADeletePicturesW Lib "AudioGenie3.dll" ()
Private Declare Function WMAGetItemKeysW Lib "AudioGenie3.dll" () As String
Private Declare Function WMAGetPictureArrayW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function WMAGetPictureDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function WMAGetPictureFileW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal Index As Integer) As Integer
Private Declare Function WMAGetPictureMimeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function WMAGetPictureTypeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function WMAGetPictureCountW Lib "AudioGenie3.dll" () As Integer
Private Declare Function FLACAddPictureArrayW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long, ByVal Description As Long, ByVal PictureType As Integer) As Integer
Private Declare Function FLACAddPictureFileW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal Description As Long, ByVal PictureType As Integer, ByVal asLink As Integer) As Integer
Private Declare Function FLACDeletePictureW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Sub FLACDeletePicturesW Lib "AudioGenie3.dll" ()
Private Declare Function FLACGetPictureArrayW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function FLACGetPictureCountW Lib "AudioGenie3.dll" () As Integer
Private Declare Function FLACGetPictureDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function FLACGetPictureFileW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal Index As Integer) As Integer
Private Declare Function FLACGetPictureMimeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function FLACGetPictureSizeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Long
Private Declare Function FLACGetPictureTypeTextW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function FLACGetPictureTypeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetPictureSizeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Long
Private Declare Function MP4GetPictureSizeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Long
Private Declare Function WMAGetPictureSizeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Long
Private Declare Function WAVGetDisplayTextW Lib "AudioGenie3.dll" () As String
Private Declare Sub WAVSetDisplayTextW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function WMAGetUserItemW Lib "AudioGenie3.dll" (ByVal ItemKey As Long) As String
Private Declare Function WMAIsVBRW Lib "AudioGenie3.dll" () As Integer
Private Declare Function WMASaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function WMASaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Function WMAAddPictureArrayW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Description As Long, ByVal PictureType As Integer, ByVal Index As Integer) As Integer
Private Declare Function WMAAddPictureFileW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal Description As Long, ByVal PictureType As Integer, ByVal Index As Integer) As Integer
Private Declare Sub WMASetUserItemW Lib "AudioGenie3.dll" (ByVal ItemKey As Long, ByVal textString As Long)

Public Enum Ausfuehrung
  FEHLERFREI = -1
  FEHLERHAFT = 0
End Enum
  
Public Enum AudioFormatID
  UNKNOWN = 0
  MPEG = 1
  WMA = 2
  MONKEY = 3
  FLAC = 4
  WAV = 5
  OGGVORBIS = 6
  MPEGPLUS = 7
  AAC = 8
  MP4M4A = 9
  TTA = 10
End Enum

Public Enum PictureType
  OTHER = 0
  FILE_ICON = 1
  OTHER_FILE_ICON = 2
  COVER_FRONT = 3
  COVER_BACK = 4
  LEAFLET_PAGE = 5
  MEDIA_LABEL = 6
  LEAD_ARTIST = 7
  ARTIST_PERFORMER = 8
  CONDUCTOR = 9
  BAND_ORCHESTRA = 10
  COMPOSER = 11
  LYRICIST = 12
  RECORDING_LOCATION = 13
  DURING_RECORDING = 14
  DURING_PERFORMANCE = 15
  MOVIE_VIDEO_SCREEN_CAPTURE = 16
  A_BRIGHT_COLOURED_FISH = 17
  ILLUSTRATION = 18
  BAND_ARTIST_LOGOTYPE = 19
  PUBLISHER_STUDIO_LOGOTYPE = 20
End Enum

Public Enum PictureLink
  AS_FILENAME = -1
  AS_PICTURE = 0
End Enum
  
Public Enum SyncLyricContentTypes
 UNGUELTIG = -1
 SONSTIGES = 0
 SONGTEXTE = 1
 TEXTUMSCHREIBUNGEN = 2
 BEWEGUNGEN = 3
 EREIGNISSE = 4
 AKKORDE = 5
 BELANGLOSES = 6
 URLS_ZU_WEBSEITEN = 7
 URLS_ZU_BILDERN = 8
End Enum

Public Enum SyncLyricTimeFormat
  UNGUELTIG = -1
  MPEGFRAMES = 1
  MILLISEKUNDEN = 2
End Enum

Public Enum CONFIG_VALUES
  CF_MPEGEXACTREAD = 0
  CF_ID3V2PADDINGSIZE = 1
  CF_ID3V2WRITEBLOCKSIZE = 2
  CF_DOEVENTSMILLIS = 3
End Enum
